Added Shell Implementation of Reports

--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MembershipController.cs" />
     <Compile Include="Controllers\OfferingsController.cs" />
+    <Compile Include="Controllers\ReportingController.cs" />
     <Compile Include="Controllers\SharedController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\TithingController.cs" />
@@ -327,9 +328,11 @@
     <Content Include="app\Components\membersGrid.component.js" />
     <Content Include="app\Components\offeringActivity.component.js" />
     <Content Include="app\Components\offeringActivity.component.spec.js" />
+    <Content Include="app\Components\reportingTabs.component.js" />
     <Content Include="app\Components\Shared\pageHeader.component.js" />
     <Content Include="app\Components\Shared\runningTotal.component.js" />
     <Content Include="app\Components\submitTransaction.component.js" />
+    <Content Include="app\Components\tithesReporting.component.js" />
     <Content Include="app\Components\tithesRunningTotal.component.js" />
     <Content Include="app\Components\tithingActivity.component.js" />
     <Content Include="app\Components\tithingActivityByMemberGrid.component.js" />
@@ -355,6 +358,8 @@
     <Content Include="app\Controllers\Offerings\Offering.controller.js" />
     <Content Include="app\Controllers\Offerings\Offering.controller.spec.js" />
     <Content Include="app\Controllers\Offerings\OfferingActivity.controller.js" />
+    <Content Include="app\Controllers\Reporting\ReportingTabs.controller.js" />
+    <Content Include="app\Controllers\Reporting\TithesReporting.controller.js" />
     <Content Include="app\Controllers\Shared\pageHeader.controller.js" />
     <Content Include="app\Controllers\Shared\runningTotals.controller.js" />
     <Content Include="app\Controllers\Tithing\AddTithes.controller.js" />
@@ -1308,6 +1313,9 @@
     <Content Include="Views\Shared\_pageHeader.cshtml" />
     <Content Include="Views\Membership\_memberEntryCompleteModal.cshtml" />
     <Content Include="Views\Dashboard\_dashboard.cshtml" />
+    <Content Include="Views\Reporting\TithingReport.cshtml" />
+    <Content Include="Views\Reporting\_tithesReport.cshtml" />
+    <Content Include="Views\Reporting\_reportingTabs.cshtml" />
     <None Include="Views\Test\SpecRunner.cshtml" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
