--- a/ChurchResourceManagerWeb/Web.config
+++ b/ChurchResourceManagerWeb/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ChurchResourceManager-20180223065527.mdf;Initial Catalog=aspnet-ChurchResourceManager-20180223065527;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ChurchResourceDbEntities" connectionString="metadata=res://*/Models.ChurchResourceDbModel.csdl|res://*/Models.ChurchResourceDbModel.ssdl|res://*/Models.ChurchResourceDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=ChurchResourceDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ChurchResourceDbEntities" connectionString="metadata=res://*/Models.ChurchResourceDbModel.csdl|res://*/Models.ChurchResourceDbModel.ssdl|res://*/Models.ChurchResourceDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:churchresourcemanager.database.windows.net,1433;initial catalog=ChurchResourceDb;persist security info=False;user id=crmAdmin;password=!passPipocheo789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
