Added Donation Reporting

--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -377,6 +377,7 @@
     <Content Include="app\Controllers\Offerings\Offering.controller.js" />
     <Content Include="app\Controllers\Offerings\Offering.controller.spec.js" />
     <Content Include="app\Controllers\Offerings\OfferingActivity.controller.js" />
+    <Content Include="app\Controllers\Reporting\DonationsReporting.controller.js" />
     <Content Include="app\Controllers\Reporting\OfferingsRerporting.controller.js" />
     <Content Include="app\Controllers\Reporting\MembershipReporting.controller.js" />
     <Content Include="app\Controllers\Reporting\ReportingTabs.controller.js" />
@@ -1351,6 +1352,7 @@
     <Content Include="Views\Donations\_donationActivity.cshtml" />
     <Content Include="Views\Donations\_editDonationModal.cshtml" />
     <Content Include="Views\Donations\_deleteDonationModal.cshtml" />
+    <Content Include="Views\Reporting\DonationReport.cshtml" />
     <None Include="Views\Test\SpecRunner.cshtml" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
