--- a/ChurchResourceManagerWeb/packages.config
+++ b/ChurchResourceManagerWeb/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Angular.UI.Bootstrap" version="2.5.0" targetFramework="net461" />
   <package id="angularjs" version="1.5.8" targetFramework="net461" />
+  <package id="angular-spinner" version="1.0.1" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
@@ -42,6 +43,7 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
+  <package id="Spin.js" version="2.0.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="toastr" version="2.1.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
