--- a/ChurchResourceManagerWeb/Web.config
+++ b/ChurchResourceManagerWeb/Web.config
@@ -7,12 +7,31 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="proper.log"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="2" />
+      <maximumFileSize value="1MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c %m%n"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+  </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ChurchResourceManager-20180223065527.mdf;Initial Catalog=aspnet-ChurchResourceManager-20180223065527;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ChurchResourceDbEntities" connectionString="metadata=res://*/Models.ChurchResourceDbModel.csdl|res://*/Models.ChurchResourceDbModel.ssdl|res://*/Models.ChurchResourceDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=ChurchResourceDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="ChurchResourceDbEntities" connectionString="metadata=res://*/Models.ChurchResourceDbModel.csdl|res://*/Models.ChurchResourceDbModel.ssdl|res://*/Models.ChurchResourceDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:churchresourcemanager.database.windows.net,1433;initial catalog=ChurchResourceDb;persist security info=False;user id=crmAdmin;password=!passPipocheo789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  <!--<add name="ChurchResourceDbEntities" connectionString="metadata=res://*/Models.ChurchResourceDbModel.csdl|res://*/Models.ChurchResourceDbModel.ssdl|res://*/Models.ChurchResourceDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IGLESIAAEED-HP\AEDFINANCESSQL;initial catalog=ChurchResourceDb;persist security info=False;user id=crmAdmin;password=Pipocheo789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="ChurchResourceDbEntities" connectionString="metadata=res://*/Models.ChurchResourceDbModel.csdl|res://*/Models.ChurchResourceDbModel.ssdl|res://*/Models.ChurchResourceDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IGLESIAAEED-HP\AEDFINANCESSQL;initial catalog=ChurchResourceDb;persist security info=False;user id=crmAdmin;password=Pipocheo789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
