--- a/ChurchResourceManagerWeb/packages.config
+++ b/ChurchResourceManagerWeb/packages.config
@@ -10,6 +10,7 @@
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MG.Packages.Angular.UI.Mask" version="1.8.7" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
