--- a/ChurchResourceManagerWeb/packages.config
+++ b/ChurchResourceManagerWeb/packages.config
@@ -8,6 +8,8 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Font.Awesome" version="5.2.0" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
+  <package id="itextsharp.xmlworker" version="5.5.13" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
@@ -43,6 +45,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="pdfmake" version="0.1.18" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="Spin.js" version="2.0.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
